app/assets/stylesheets/views/_header.css.scss
header {
  .wrapper {
    padding: 0;
  }

  @media (min-width: 1200px) {
    .wrapper {
        margin: 0 40px;
        width: auto;
    }
  }

  @media (min-width: 992px) and (max-width: 1600px) {
    .header-main {
      .header-column {
        display: block;
      }

      .header-column.logo {
        float: none !important;
        margin-right: 0;
        text-align: center;
        
        .header-logo {
          margin-bottom: 10px;
        }
      }

    }

    #main-nav nav.navbar {
      text-align: center;
      margin-right: 0;
      float: none !important;

      & > ul > li > a {
        padding: 18px 5px;
      }
    }

    .fixed-top {
      .header-column.logo {
        display: none;
      }
    }
    
    .header-normal .header-main .header-table {
        margin: 29px 0 10px;
    }
  }

  @media (min-width: 1200px) and (max-width: 1600px) {
    #main-nav nav.navbar {
      & > ul > li > a {
        padding: 18px 18px;
      }
    }
  }

  @media (min-width: 992px) and (max-width: 1200px) {
    .wrapper {
        margin: 0 40px;
        width: auto;
    }
  }

  @media (min-width: 768px) and (max-width: 992px) {
    .wrapper {
        margin: 0 40px;
        width: auto;
    }
  }


  @media (min-width: 480px) and (max-width: 768px) {
    .wrapper {
        margin: 0 15px;
        width: auto;
    }
  }


  @media (max-width: 480px) {
    .wrapper {
        margin: 0;
        width: auto;
    }
  }

  &.header-normal .header-body {
      height: auto !important;
  }

  .header-top-links {

    .nav {
      .dropdown-menu {
        & > li {
          & > a {
            color: #999;
            padding: 10px 5px;

            &:hover {
              color: #0eaefb;
            }

            i {
              top: 50%;
            }
          }
        }
      }
    }  
  }

  &.header-normal .header-main .header-main-nav .nav>li>a {
      padding: 18px 25px;
  }

  .header-top-links .dropdown-search > ul > li {
    position: relative;
  }

  .header-main .header-main-nav .nav li a.hidden {
      display: block !important;
  }

  .header-top-links .dropdown-search .dropdown-menu.droped {
    display: block !important;
  }

  .header-top-links .dropdown-search > .dropdown-menu > li {
      position: relative
  }
}


@media (max-width: 991px) {
  .content-header.breadcrumb-header .wrapper {
    width: auto;
  }
  
  .responsive-type1 .header-main .navbar-nav li {
      clear: both;
      overflow-y: auto;
  }
}

